--- a/Makefile.target
+++ b/Makefile.target
@@ -368,6 +368,7 @@ obj-arm-y += vexpress.o
 obj-arm-y += strongarm.o
 obj-arm-y += collie.o
 obj-arm-y += pl041.o lm4549.o
+obj-arm-y += msm_zte_v9.o msm_a9.o msm_uart.o msm_gpt.o msm_vic.o msm_mddi.o
 
 obj-sh4-y = shix.o r2d.o sh7750.o sh7750_regnames.o tc58128.o
 obj-sh4-y += sh_timer.o sh_serial.o sh_intc.o sh_pci.o sm501.o
